--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Hello, World! By Bella </h1>
     <p>This is my first GitHub Pages website for Mathematics of Data Science.</p>
 </body>
 </html>
