--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Hello, World! By Bella </h1>
     <p>This is my first GitHub Pages website for Mathematics of Data Science.</p>
+<b>pink</b>
 </body>
 </html>
